# personal_project_template

./: .gitignore  README.md  justfile  pyproject.toml  ruff.toml
tests/: test_import.py
